# Life

./: .gitignore  CMakeLists.txt  CMakePresets.json  Life.code-workspace  Main.cpp  README.md
Body/: Chunk.cpp  Map.cpp  Neighbor.cpp
DrawIO diagrams/: Map_Manager.drawio
Header/: Cell.h  Chunk.h  Debug.h  Map.h  Neighbor.h  Point.h
Source/: Cell.cpp  Chunk.cpp  Debug.cpp  Main.cpp  Map.cpp  Neighbor.cpp  Point.cpp
body/: Cache.cpp  CacheChunk.cpp  Cell.cpp  Chunk.cpp  Debug.cpp  Life.cpp  Manager.cpp  Map.cpp  Sparse.cpp  Unordered.cpp  World.cpp
doc/: DYNChunk.h  Life  Neighbor.cpp  Note.txt  bin.cpp
doc/Exclude/: BaseChunkv2.h  CacheChunk.h  DYNChunk.h  Neighbor.cpp
docs/: Online Gantt 20251101.gantt
include/: Cache.h  CacheChunk.h  Cell.h  Chunk.h  Debug.h  Life.h  Manager.h  Map.h  Neighbor.h  README.md  Sparse.h  Unordered.h  World.h  json.hpp
old/Exclude/: BaseChunk.cpp  BaseChunk.h  CacheChunk.cpp
script/: File_Header.py  header.py  profile_graphs.py  report.py
script/data/: ABOUT.md  profile_Unordered.json
script/raw/c32_r16/: profile_unordered_r16.json
script/raw/c32_r32/: profile_unordered_r32.json
script/raw/c32_r8/: profile_unordered_r8.json
source/: App.cpp  BaseChunk.cpp  Cache.cpp  CacheChunk.cpp  Cell.cpp  Chunk.cpp  Chunk.h  Controller.h  Debug.cpp  Interface.cpp  Interface.h  Life.cpp  Main.cpp  Manager.cpp  Rules.h  Sparse.cpp  Unordered.cpp  View.cpp  View.h  World.cpp
source/include/: BaseChunk.h  Cache.h  CacheChunk.h  Cell.h  Chunk.h  Controller.h  DYNChunk.h  Debug.h  Interface.h  Life.h  Manager.h  Rules.h  Sparse.h  Unordered.h  World.h
source/ui/: style.css
src/app/: App.cpp  App.h  Global.h  Settings.h
src/app/controller/: Controller.cpp  Controller.h  Manager.cpp  Manager.h
src/app/model/: Model.cpp  Model.h
src/app/simulation/: Simulation.cpp  Simulation.h
src/app/view/: Interface.cpp  Interface.h  View.cpp  View.h
src/app/window/: Interface.cpp  Interface.h  MainWindow.cpp  MainWindow.h  View.cpp  View.h  Window.cpp  Window.h
src/app/window/panels/: GeneratePanel.cpp  GeneratePanel.h  GenerateView.cpp  GenerateView.h  RulePanel.cpp  RulePanel.h  RuleView.cpp  RuleView.h  SettingPanel.cpp  SettingPanel.h  SettingView.cpp  SettingView.h
src/launcher/: main.cpp
src/profiler/: ProfileStats.h  Profiler.cpp  Profiler.h
src/resources/: style.css
src/rules/: Rules.cpp  Rules.h
src/threading/: Scheduler.cpp  Scheduler.h
src/utility/: Logger.cpp  Logger.h
src/world/: Debug.cpp  Debug.h  Generator.cpp  Generator.h  Manager.cpp  Manager.h  World.cpp  World.h
src/world/storage/: Cache.cpp  Cache.h  Sparse.cpp  Sparse.h  Unordered.cpp  Unordered.h
src/world/structure/: Cell.cpp  Cell.h  Chunk.cpp  Chunk.h
tests/: BuildTests.cpp  CMakeLists.txt  CacheTests.cpp  CellTests.cpp  ChunkTests.cpp  ManagerTests.cpp  SparseTests.cpp  UnorderedTests.cpp  WorldTests.cpp
